# trusthandoff

./: ADAPTER_CONTRACT.md  CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md  SECURITY.md  demo_attack.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  publish.yml  scorecard.yml  tests.yml
adapters/: adapter_autogen.py  adapter_crewai.py  adapter_langgraph.py  test_adapter_autogen.py  test_adapter_crewai.py  test_adapter_langgraph.py
docs/guides/: quickstart.md
examples/: example_wire_flow.py  human_review_demo.py  langgraph_demo.py  sentinel_demo.py  ttl_policy_demo.py
specs/: capability-model.md  execution-model.md  identity-model.md  trusthandoff-spec-v0.2.md  wire-format.md
tasks/: lessons.md
tests/: test_agent_registry.py  test_agent_registry_revocation.py  test_agent_revocation_pipeline.py  test_api.py  test_authorization.py  test_capability.py  test_capability_api.py  test_capability_propagation.py  test_capability_validation.py  test_chain.py  test_clock_skew_tolerance.py  test_depth.py  test_e2e_protocol.py  test_envelope.py  test_envelope_serialization.py  test_errors.py  test_execution_control.py  test_executor.py  test_executor_reject.py  test_identity.py  test_identity_binding.py  test_middleware.py  test_middleware_revalidation.py  test_packet.py  test_packet_propagation.py  test_policy.py  test_registry_binding.py  test_replay.py  test_replay_guard_pipeline.py  test_revalidation.py  test_revalidation.py.save  test_serialization.py  test_signing.py  test_ttl_policy.py  test_validation.py  test_verification.py
(+44 files in other folders)
